--- a/Week_1/01/webapp/view/App.view.xml
+++ b/Week_1/01/webapp/view/App.view.xml
@@ -1,7 +1,12 @@
-<mvc:View
+    <mvc:View
 displayBlock="true"
 	xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.m">
+	xmlns="sap.m"
+	controllerName="opensap.myapp.controller.App">
+    <Button
+	text="Say Hello!"
+	press="onShowHello"/>
+
 	<Carousel>
 		<pages>
 			<Image 		src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Language_region_maps_of_India.svg/1200px-Language_region_maps_of_India.svg.png"
@@ -10,4 +15,5 @@ displayBlock="true"
 				height="600px"/>
 		</pages>
 	</Carousel>
+	
 </mvc:View>
